# MHQA-SetVerify

./: README.md  config.py  pyproject.toml
Full-Pipeline/: pipeline_bon.py  pipeline_self_ask_reranker.py  pipeline_sep.py
Full-Pipeline/answer_generator/: answer_generator_sep.py  prompts.py
Full-Pipeline/modules/: __init__.py  openai.py
Full-Pipeline/query_generator/: prompts.py  query_generator_self_ask.py  query_generator_sep.py
Full-Pipeline/stop_decider/: prompts.py  stop_decider.py
Full-Pipeline/verifier/: __init__.py  bon_verifier.py
Training/: compute_scores.py  deepspeed_config.json  extract_partial_traces.py  multihead_stop_decider_train.py  split_data.py  stop-verifier-train.py  stop_decider_train.py  trace_verifier_train.py  utils.py
Training/preprocessing/: compute_labels.py  compute_max_scores.py  compute_metrics.py  compute_probs.py  compute_scores.py  extract_partial_traces.py  split_data.py
Training/test/: llm_stop_decider_test.py  max_stop_decider_test.py  trained_multihead_stop_decider_compute_scores.py  trained_multihead_stop_decider_test.py  trained_stop_decider_compute_scores.py  trained_stop_decider_test.py
baselines/adaptive-rag/: adaptive-rag.py  adaptive_pipeline.py  classifier_train.py  labeling.py  utils.py
baselines/corag/: compute_metrics.py  extract_partial_traces.py  modules.py  pipeline.py  prompts.py
baselines/ircot/: modules.py  (+3 more)
datasets/: build_corpus.py  build_corpus.sh  download_datasets.sh
download/: build_corpus.sh  build_index.sh  download_datasets.sh  subsample_data.py
pipeline/: pipeline_sep.py  utils.py
(+10 files in other folders)
